# pychess

./: .gitignore  .pre-commit-config.yaml  Board.py  Dockerfile  LICENSE  Piece.py  Position.py  README  README.md  chess_digest.py  digest.py  engine.py  platforms.py  pyproject.toml  requirements.txt  settings.py  utils.py  weekly_digest.py
