[tool.poetry]
name = "pychess"
version = "0.1.0"
description = ""
authors = ["Nate Nowack <thrast36@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
ipython = "^8.1.1"
numpy = "^1.22.3"
black = "^22.1.0"
flake8 = "^4.0.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
